tests/baselines/reference/exportAssignmentWithDeclareAndExportModifiers.errors.txt
exportAssignmentWithDeclareAndExportModifiers.ts(2,1): error TS1120: An export assignment cannot have modifiers.


==== exportAssignmentWithDeclareAndExportModifiers.ts (1 errors) ====
    var x;
    export declare export = x;
    ~~~~~~
!!! error TS1120: An export assignment cannot have modifiers.